--- a/examples/inet/shq/omnetpp.ini
+++ b/examples/inet/shq/omnetpp.ini
@@ -1,16 +1,16 @@
 [General]
 
-network = LgcIncast
+network = ShQ
 
 parallel-simulation = false
 warnings = true
-#sim-time-limit = 3.3s
+sim-time-limit = 5.0s
 
 #cmdenv-module-messages = true # for normal (non-express) mode only
 cmdenv-event-banners = true   # for normal (non-express) mode only
 
-**.e*.datarate = 100Mbps
-**.e*.delay = 3ms
+#**.e*.datarate = 100Mbps
+#**.e*.delay = 3ms
 
 #
 # Network specific settings
@@ -32,7 +32,7 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 **.tcp.windowScalingSupport   = true    # Window Scale (RFC 1323) support (header option) (WS will be enabled for a connection if both endpoints support it)
 **.tcp.timestampSupport       = false   # Timestamps (RFC 1323) support (header option) (TS will be enabled for a connection if both endpoints support it)
 **.tcp.tcpAlgorithmClass      = "DcTcp" # TCPReno/TCPTahoe/TCPNewReno/TCPNoCongestionControl/DumbTCP
-**.tcp.advertisedWindow       = 350000
+#**.tcp.advertisedWindow       = 350000
 **.tcp.recordStats            = true
 **.tcp.mss                    = 1460
 **.tcp.ecnWillingness         = true
@@ -48,30 +48,42 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 **.client1*.app[0].active         = true
 **.client1*.app[0].localPort      = -1
 **.client1*.app[0].connectAddress = "client21"
-**.client1*.app[0].tOpen          = 1s
-**.client1*.app[0].sendBytes      = 10MiB
+**.client1*.app[0].tOpen          = 0s
+**.client1*.app[0].sendBytes      = 1000MiB
 **.client1*.app[0].sendScript     = ""
 **.client1*.app[0].tClose         = 0s
 
 **.client11.app[0].connectPort    = 1000
 **.client12.app[0].connectPort    = 1001
 
+# thruput measurement settings
+**.startTime = 0s     # start time
+#**.batchSize = 50     # number of packets in a batch
+#**.maxInterval = 1s   # max length of measurement interval (measurement ends
+                      # if either batchsize or maxinterval is reached, whichever
+                      # is reached first)
+
+[Config ShQueue]
 
 #**.eth[*].queueType = "ShQDropper"
-**.routerCore.ppp[*].queue.typename	    = "ShQDropperQueue"
-**.routerCore.ppp[*].queue.shq.limit    = 1000
-**.routerCore.ppp[*].queue.shq.interval = 0.01
-**.routerCore.ppp[*].queue.shq.maxp	= 0.95
-**.routerCore.ppp[*].queue.shq.alpha    = 0.2
-**.routerCore.ppp[*].queue.shq.pkrate   = 8333.3333
-**.routerCore.ppp[*].queue.shq.useEcn   = true
+**.routerCore.eth[*].mac.queue.typename	    = "ShQDropperQueue"
+**.routerCore.eth[*].mac.queue.shq.limit    = 1000
+**.routerCore.eth[*].mac.queue.shq.interval = 0.01s
+**.routerCore.eth[*].mac.queue.shq.maxp	    = 0.95
+**.routerCore.eth[*].mac.queue.shq.alpha    = 0.2
+**.routerCore.eth[*].mac.queue.shq.pkrate   = 8333.333
+**.routerCore.eth[*].mac.queue.shq.useEcn   = true
 
 
-############################################################## DCTCP-Incast
-[Config LgcIncast]
-**.client*.app[0].tSend = 62s
+[Config RedQueue]
 
-[Config TcpRenoIncast]
-extends  = LgcIncast
-
-**.tcp.tcpAlgorithmClass = "TcpReno"
+#**.eth[*].queueType = "REDDropper"
+**.routerCore.eth[*].mac.queue.typename			= "RedDropperQueue"
+**.routerCore.eth[*].mac.queue.red.useEcn		= true
+**.routerCore.eth[*].mac.queue.red.wq			= 0.5
+**.routerCore.eth[*].mac.queue.red.minth		= 10
+**.routerCore.eth[*].mac.queue.red.maxth		= 60
+**.routerCore.eth[*].mac.queue.red.maxp			= 1.0
+**.routerCore.eth[*].mac.queue.red.pkrate		= 8333.333
+**.routerCore.eth[*].mac.queue.red.mark			= 1
+**.routerCore.eth[*].mac.queue.red.packetCapacity = 1000
