fixed ECN negotiation

--- a/examples/inet/shq/omnetpp.ini
+++ b/examples/inet/shq/omnetpp.ini
@@ -35,6 +35,7 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 #**.tcp.advertisedWindow       = 350000
 **.tcp.recordStats            = true
 **.tcp.mss                    = 1460
+**.tcp.ect                    = true
 **.tcp.ecnWillingness         = true
 
 
