--- a/examples/inet/shq/omnetpp.ini
+++ b/examples/inet/shq/omnetpp.ini
@@ -4,7 +4,7 @@ network = ShQ
 
 parallel-simulation = false
 warnings = true
-sim-time-limit = 5.0s
+#sim-time-limit = 3.0s
 
 #cmdenv-module-messages = true # for normal (non-express) mode only
 cmdenv-event-banners = true   # for normal (non-express) mode only
@@ -35,8 +35,8 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 #**.tcp.advertisedWindow       = 350000
 **.tcp.recordStats            = true
 **.tcp.mss                    = 1460
-**.tcp.ect                    = true
-**.tcp.ecnWillingness         = true
+**.tcp.ecnWillingness = true
+**.tcp.ect = true
 
 
 ## tcp apps
@@ -50,7 +50,7 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 **.client1*.app[0].localPort      = -1
 **.client1*.app[0].connectAddress = "client21"
 **.client1*.app[0].tOpen          = 0s
-**.client1*.app[0].sendBytes      = 1000MiB
+**.client1*.app[0].sendBytes      = 100MiB
 **.client1*.app[0].sendScript     = ""
 **.client1*.app[0].tClose         = 0s
 
@@ -67,13 +67,13 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 [Config ShQueue]
 
 #**.eth[*].queueType = "ShQDropper"
-**.routerCore.eth[*].mac.queue.typename	    = "ShQDropperQueue"
-**.routerCore.eth[*].mac.queue.shq.limit    = 1000
-**.routerCore.eth[*].mac.queue.shq.interval = 0.01s
-**.routerCore.eth[*].mac.queue.shq.maxp	    = 0.95
-**.routerCore.eth[*].mac.queue.shq.alpha    = 0.2
-**.routerCore.eth[*].mac.queue.shq.pkrate   = 8333.333
-**.routerCore.eth[*].mac.queue.shq.useEcn   = true
+**.routerCore.ppp[0].ppp.queue.typename	    = "ShQDropperQueue"
+**.routerCore.ppp[0].ppp.queue.shq.limit    = 1000
+**.routerCore.ppp[0].ppp.queue.shq.interval = 0.01s
+**.routerCore.ppp[0].ppp.queue.shq.maxp	    = 0.95
+**.routerCore.ppp[0].ppp.queue.shq.alpha    = 0.2
+**.routerCore.ppp[0].ppp.queue.shq.pkrate   = 8333.333
+**.routerCore.ppp[0].ppp.queue.shq.useEcn   = true
 
 
 [Config RedQueue]
