--- a/examples/inet/shq/omnetpp.ini
+++ b/examples/inet/shq/omnetpp.ini
@@ -36,26 +36,31 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 **.tcp.recordStats            = true
 **.tcp.mss                    = 1460
 **.tcp.ecnWillingness = true
+**.tcp.ecnEnabled = true
 **.tcp.ect = true
 
 
 ## tcp apps
-**.client21.numApps               = 2
-**.client21.app[*].typename       = "TcpSinkApp"
-**.client21.app[0].localPort      = 1000
-**.client21.app[1].localPort      = 1001
 **.client1*.numApps               = 1
+**.client2*.numApps               = 1
+**.client2*.app[*].typename       = "TcpSinkApp"
+**.client2*.app[0].localPort      = 1000
+
 **.client1*.app[*].typename       = "TcpSessionApp"
 **.client1*.app[0].active         = true
 **.client1*.app[0].localPort      = -1
-**.client1*.app[0].connectAddress = "client21"
+
 **.client1*.app[0].tOpen          = 0s
-**.client1*.app[0].sendBytes      = 100MiB
+**.client1*.app[0].sendBytes      = 10MiB
 **.client1*.app[0].sendScript     = ""
 **.client1*.app[0].tClose         = 0s
 
-**.client11.app[0].connectPort    = 1000
-**.client12.app[0].connectPort    = 1001
+**.client11.app[0].connectAddress = "client21"
+**.client12.app[0].connectAddress = "client22"
+**.client13.app[0].connectAddress = "client23"
+**.client14.app[0].connectAddress = "client24"
+**.client15.app[0].connectAddress = "client25"
+**.client1*.app[0].connectPort    = 1000
 
 # thruput measurement settings
 **.startTime = 0s     # start time
@@ -67,24 +72,22 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 [Config ShQueue]
 
 #**.eth[*].queueType = "ShQDropper"
-**.routerCore.ppp[0].ppp.queue.typename	    = "ShQDropperQueue"
-**.routerCore.ppp[0].ppp.queue.shq.limit    = 1000
-**.routerCore.ppp[0].ppp.queue.shq.interval = 0.01s
-**.routerCore.ppp[0].ppp.queue.shq.maxp	    = 0.95
-**.routerCore.ppp[0].ppp.queue.shq.alpha    = 0.2
-**.routerCore.ppp[0].ppp.queue.shq.pkrate   = 8333.333
-**.routerCore.ppp[0].ppp.queue.shq.useEcn   = true
+**.routerCore[*].ppp[*].ppp.queue.typename     = "ShQDropperQueue"
+**.routerCore[*].ppp[*].ppp.queue.shq.limit    = 1000
+**.routerCore[*].ppp[*].ppp.queue.shq.interval = 0.01s
+**.routerCore[*].ppp[*].ppp.queue.shq.maxp     = 1.0
+**.routerCore[*].ppp[*].ppp.queue.shq.alpha    = 0.2
+**.routerCore[*].ppp[*].ppp.queue.shq.pkrate   = 12500000 #Bps
+**.routerCore[*].ppp[*].ppp.queue.shq.useEcn   = true
 
 
 [Config RedQueue]
-
 #**.eth[*].queueType = "REDDropper"
-**.routerCore.eth[*].mac.queue.typename			= "RedDropperQueue"
-**.routerCore.eth[*].mac.queue.red.useEcn		= true
-**.routerCore.eth[*].mac.queue.red.wq			= 0.5
-**.routerCore.eth[*].mac.queue.red.minth		= 10
-**.routerCore.eth[*].mac.queue.red.maxth		= 60
-**.routerCore.eth[*].mac.queue.red.maxp			= 1.0
-**.routerCore.eth[*].mac.queue.red.pkrate		= 8333.333
-**.routerCore.eth[*].mac.queue.red.mark			= 1
-**.routerCore.eth[*].mac.queue.red.packetCapacity = 1000
+**.routerCore[*].ppp[*].ppp.queue.typename	     = "RedDropperQueue"
+**.routerCore[*].ppp[*].ppp.queue.red.useEcn	     = true
+**.routerCore[*].ppp[*].ppp.queue.red.wq	     = 0.5
+**.routerCore[*].ppp[*].ppp.queue.red.minth	     = 10
+**.routerCore[*].ppp[*].ppp.queue.red.maxth	     = 60
+**.routerCore[*].ppp[*].ppp.queue.red.maxp	     = 1.0
+**.routerCore[*].ppp[*].ppp.queue.red.pkrate	     = 8333.333
+**.routerCore[*].ppp[*].ppp.queue.red.packetCapacity = 1000
