--- a/examples/inet/shq/omnetpp.ini
+++ b/examples/inet/shq/omnetpp.ini
@@ -32,7 +32,7 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 **.tcp.sackSupport            = false   # Selective Acknowledgment (RFC 2018, 2883, 3517) support (header option) (SACK will be enabled for a connection if both endpoints support it)
 **.tcp.windowScalingSupport   = true    # Window Scale (RFC 1323) support (header option) (WS will be enabled for a connection if both endpoints support it)
 **.tcp.timestampSupport       = false   # Timestamps (RFC 1323) support (header option) (TS will be enabled for a connection if both endpoints support it)
-**.tcp.tcpAlgorithmClass      = "DcTcp" # TCPReno/TCPTahoe/TCPNewReno/TCPNoCongestionControl/DumbTCP
+**.tcp.tcpAlgorithmClass      = "TcpReno" # TCPReno/TCPTahoe/TCPNewReno/TCPNoCongestionControl/DumbTCP
 **.tcp.advertisedWindow       = 350000
 **.tcp.recordStats            = true
 **.tcp.mss                    = 1460
@@ -52,7 +52,7 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
 
 **.clients*[*].app[0].tOpen          = 0s
 **.clients*[*].app[0].tSend          = 1s
-**.clients*[*].app[0].sendBytes      = 1MiB
+**.clients*[*].app[0].sendBytes      = 1GiB
 **.clients*[*].app[0].sendScript     = ""
 **.clients*[*].app[0].tClose         = 0s
 
@@ -68,33 +68,45 @@ cmdenv-event-banners = true   # for normal (non-express) mode only
                       # if either batchsize or maxinterval is reached, whichever
                       # is reached first)
 
-[Config ShQueue]
+[Config DcTcp+ShQueue]
 
 #**.eth[*].queueType = "ShQDropper"
-**.routerCore[*].ppp[*].ppp.queue.typename     = "ShQDropperQueue"
-**.routerCore[*].ppp[*].ppp.queue.shq.limit    = 1000
-**.routerCore[*].ppp[*].ppp.queue.shq.interval = 0.01s
-**.routerCore[*].ppp[*].ppp.queue.shq.maxp     = 0.1
-**.routerCore[*].ppp[*].ppp.queue.shq.alpha    = 0.2
-**.routerCore[*].ppp[*].ppp.queue.shq.datarate = 10Gbps
-**.routerCore[*].ppp[*].ppp.queue.shq.useEcn   = true
+**.routerCore*.ppp[*].ppp.queue.typename     = "ShQDropperQueue"
+**.routerCore*.ppp[*].ppp.queue.shq.limit    = 5000
+**.routerCore*.ppp[*].ppp.queue.shq.interval = 0.01s
+**.routerCore*.ppp[*].ppp.queue.shq.maxp     = 0.1
+**.routerCore*.ppp[*].ppp.queue.shq.alpha    = 0.2
+**.routerCore*.ppp[*].ppp.queue.shq.datarate = 10Gbps
+**.routerCore*.ppp[*].ppp.queue.shq.useEcn   = true
 
-**.routerCore[*].eth[*].mac.queue.typename     = "ShQDropperQueue"
-**.routerCore[*].eth[*].mac.queue.shq.limit    = 1000
-**.routerCore[*].eth[*].mac.queue.shq.interval = 0.01s
-**.routerCore[*].eth[*].mac.queue.shq.maxp     = 0.1
-**.routerCore[*].eth[*].mac.queue.shq.alpha    = 0.2
-**.routerCore[*].eth[*].mac.queue.shq.datarate = 1Gbps
-**.routerCore[*].eth[*].mac.queue.shq.useEcn   = true
+**.routerCore*.eth[*].mac.queue.typename     = "ShQDropperQueue"
+**.routerCore*.eth[*].mac.queue.shq.limit    = 5000
+**.routerCore*.eth[*].mac.queue.shq.interval = 0.01s
+**.routerCore*.eth[*].mac.queue.shq.maxp     = 0.1
+**.routerCore*.eth[*].mac.queue.shq.alpha    = 0.2
+**.routerCore*.eth[*].mac.queue.shq.datarate = 1Gbps
+**.routerCore*.eth[*].mac.queue.shq.useEcn   = true
 
-[Config RedQueue]
+**.tcp.tcpAlgorithmClass = "DcTcp"
+
+[Config DcTcp+RedQueue]
 #**.eth[*].queueType = "REDDropper"
-**.routerCore[*].ppp[*].ppp.queue.typename	     = "RedDropperQueue"
-**.routerCore[*].ppp[*].ppp.queue.red.useEcn	     = true
-**.routerCore[*].ppp[*].ppp.queue.red.wq	     = 1.0
-**.routerCore[*].ppp[*].ppp.queue.red.minth	     = 20
-**.routerCore[*].ppp[*].ppp.queue.red.maxth	     = 60
-**.routerCore[*].ppp[*].ppp.queue.red.maxp	     = 0.1
-**.routerCore[*].ppp[*].ppp.queue.red.pkrate	     = 8333.333
-**.routerCore[*].ppp[*].ppp.queue.red.packetCapacity = 1000
+**.routerCore*.ppp[*].ppp.queue.typename	   = "RedDropperQueue"
+**.routerCore*.ppp[*].ppp.queue.red.wq	           = 1.0
+**.routerCore*.ppp[*].ppp.queue.red.minth	   = 50
+**.routerCore*.ppp[*].ppp.queue.red.maxth	   = 150
+**.routerCore*.ppp[*].ppp.queue.red.maxp	   = 0.1
+**.routerCore*.ppp[*].ppp.queue.red.pkrate	   = 833333.3333
+**.routerCore*.ppp[*].ppp.queue.red.packetCapacity = 5000
+**.routerCore*.ppp[*].ppp.queue.red.useEcn	   = true
 
+**.routerCore*.eth[*].mac.queue.typename	   = "RedDropperQueue"
+**.routerCore*.eth[*].mac.queue.red.wq	           = 1.0
+**.routerCore*.eth[*].mac.queue.red.minth	   = 20
+**.routerCore*.eth[*].mac.queue.red.maxth	   = 60
+**.routerCore*.eth[*].mac.queue.red.maxp	   = 0.1
+**.routerCore*.eth[*].mac.queue.red.pkrate	   = 83333.3333
+**.routerCore*.eth[*].mac.queue.red.packetCapacity = 5000
+**.routerCore*.eth[*].mac.queue.red.useEcn	   = true
+
+**.tcp.tcpAlgorithmClass = "DcTcp"
